--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "info-car-notifier",
   "module": "index.ts",
+  "version": "1.0.0",
   "type": "module",
   "devDependencies": {
     "@types/bun": "latest"
