Add auto registration

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,13 @@ TWILIO_SEND_TO_DEBUG=+48000000000
 TWILIO_FROM=+48000000000
 TWILIO_SID=ABCD
 TWILIO_AUTH_TOKEN=ABCD
+
+REGISTER_FEATURE=false
+REGISTER_LOGIN=
+REGISTER_PASSWORD=
+REGISTER_PESEL=
+REGISTER_PKK=
+REGISTER_FIRST_NAME=
+REGISTER_LAST_NAME=
+REGISTER_EMAIL=
+REGISTER_PHONE=
